<resources>
    <string name="app_name">HEAVEN</string>
    <string name="title_activity_maps">Map</string>

    <!--    LOGIN ACTIVITY   -->
    <string name="title_activity_login">AppResAvion : Identification</string>
    <string name="footer_login">Voyagez encore plus simplement !</string>
    <string name="create_account">Créer un compte</string>
    <string name="connect">Se connecter</string>
    <string name="email">Adresse Email</string>
    <string name="hint_mail">"Votre adresse Email"</string>
    <string name="password">Mot de passe</string>
    <string name="hint_pass">"Votre mot de passe"</string>
    <string name="email_format_error">"Le champs Email ne correspond pas au format d'une adresse mail..."</string>
    <string name="email_or_password_empty">"L\'adresse Email et mot de passe sont obligatoires !"</string>
    <string name="error_invalid_email">Cette adresse mail n\'est pas valide.</string>
    <string name="error_invalid_password">Ce mot de passe doit comprendre plus de caractères.</string>
    <string name="error_incorrect_password">Votre mot de passe est incorrect...</string>
    <string name="error_field_required">Ce champs est requis !</string>
    <string name="permission_rationale">L\'accès à vos contacts est nécessaire pour permettre l\'auto-complétion !</string>
    <string name="nouvel_user">Pas encore inscrit ? Cliquez sur le bouton ci-dessous</string>
    <string name="nouvel_user_btn">Nouvel Utilisateur</string>

    <!--   INSCRIPTION  ACTIVITY    -->
    <string name="title_activity_inscription">Nouvel Utilisateur</string>
    <string name="titre_nvuser">Nouvel utilisateur</string>
    <string name="nom_user">Nom : </string>
    <string name="nom_user_hint">Votre nom</string>
    <string name="prenom_user">Prénom :</string>
    <string name="prenom_user_hint">Votre Prénom</string>
    <string name="pseudo_user">Pseudo : </string>
    <string name="pseudo_user_hint">Votre pseudo souhaité</string>
    <string name="mdp_user">Mot de passe : </string>
    <string name="mdp_user_hint">Votre mot de passe</string>
    <string name="confirm_mdp_user">Retaper le mot de passe : </string>
    <string name="confirm_mdp_user_hint">Votre mot de passe</string>
    <string name="mail_user">Adresse e-mail : </string>
    <string name="mail_user_hint">Votre Adresse e-mail</string>
    <string name="adresse_user">Adresse postale : </string>
    <string name="adresse_user_hint">Votre adresse</string>
    <string name="cp_user">Code Postal : </string>
    <string name="cp_user_hint">Votre code postal</string>
    <string name="ville_user">Ville : </string>
    <string name="ville_user_hint">Votre ville</string>
    <string name="tel_user">Numéro de téléphone : </string>
    <string name="tel_user_hint">Votre numéro de téléphone</string>
    <string name="mobile_user">Numéro de téléphone mobile : </string>
    <string name="mobile_user_hint">Votre numéro de téléphone mobile</string>
    <string name="btn_valider_nvuser">Valider</string>
    <string name="error_nom_user">Veuillez entrer un nom valide.</string>
    <string name="error_prenom_user">Veuillez entrer un prénom valide.</string>
    <string name="error_pseudo_user">Veuillez entrer un pseudo valide.</string>
    <string name="error_pseudo_taken">Le pseudo est déjà pris.</string>
    <string name="error_mdp_user">Veuillez entrer un mot de passe d\'au moins 4 caractères..</string>
    <string name="error_confmdp_user">Le mot de passe ne correspond pas à celui au-dessus.</string>
    <string name="error_mail_user">Veuillez entrer une adresse mail valide.</string>
    <string name="error_mail_taken">L\'adresse e-mail est déjà prise.</string>
    <string name="error_adresse_user">Veuillez entrer une adresse valide.</string>
    <string name="error_ville_user">Veuillez entrer une ville valide.</string>
    <string name="error_cp_user">Veuillez entrer un code postal valide.</string>
    <string name="error_tel_user">Veuillez entrer un numéro de téléphone valide.</string>
    <string name="error_mobile_user">Veuillez entrer un numéro de téléphone mobile valide.</string>


    <!--    MAPS ACTIVITY    -->
    <string name="geoloc_ok">"Géolocalisation effectuée avec succès !"</string>

    <!--    Navigation    -->
    <string name="GMap_label">Itinéraire</string>
    <string name="GMap_description">Localisation GMS avec trajet routier vers Aeroport</string>

    <!--    PermissionsUtilis    -->
    <string name="permission_rationale_location">L\'accès au service de localisation est nécessaire pour utiliser la fonctionnalité \'my location\', qui indique votre position actuelle sur la carte.</string>
    <string name="location_permission_denied">Cet activité nécessite l\'autorisation de localisation pour activer le layer \'my location\'.  Veuillez essayer de nouveau en accordant l\'accès à la géolocalisation.\nSi l\'autorisation a été refusée de manière permanence, il peut être activé à partir des paramètres système &gt; Apps &gt; AppResAvion</string>
    <string name="permission_required_toast">Votre géolocalisation est nécessaire pour utiliser cette fonctionnalité.</string>

    <!-- navigation accueil/trajet/num vol -->
    <string name="navigation_drawer_open">Ouvrir le menu de navigation</string>
    <string name="navigation_drawer_close">Fermer le menu de navigation</string>
    <string name="action_settings">Géolocalisation</string>

    <!--    ACCUEIL ACTIVITY   -->
    <string name="title_activity_accueil">Accueil</string>

    <!--    TRAJETS ACTIVITY   -->
    <string name="title_activity_trajets">Trouvez votre vol</string>



    <!--    DETAILS ACTIVITY    -->
    <string name="title_activity_details">DetailsActivity</string>
    <string name="btn_reserver">Réserver</string>
    <string name="btn_retour_details">Retour</string>
    <string name="txt_aeroport_depart">Aéroport de départ</string>
    <string name="txt_heure_depart">Horaire de départ</string>
    <string name="txt_aeroport_arrivee">Aéroport d\'arrivée</string>
    <string name="txt_heure_arrivee">Horaire d\'arrivée</string>
    <string name="logo_avion">logo_avion</string>
    <string name="btn_itineraire">Voir itinéraire</string>

    <!-- RECHERCHE ACTIVITY -->
    <string name="title_activity_recherche">RechercheActivity</string>
    <string name="lieuETchoixAeroport"></string>
    <string name="lieuTVafficherAeroports" />
    <string name="lieuLVlisteAeroports"></string>
    <string name="lieuTVnbResultats"></string>
    <string name="lieuHTlisteAeroports">-> Aéroport, ville, pays, code</string>
    <string name="accueilTVafficherDepart">Départ</string>
    <string name="accueilTVafficherArrivee">Arrivée</string>
    <string name="accueilETChoixDepart" />
    <string name="accueilETChoixArrivee" />
    <string name="accueilTVdateDepart">Date aller</string>
    <string name="accueilETdateDepart" />
    <string name="accueilTVdateArrivee">Date retour</string>
    <string name="accueilCVcalendrier"></string>
    <string name="accueilCBallerRetour">Aller-retour</string>
    <string name="accueilTVchoixClasse">Classe</string>
    <string name="accueilBTvalider">RECHERCHER</string>

</resources>
